# Clash-Royale-Clone

./: Architecture_documentation.md  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
include/core/: EntityFactory.hpp  board.hpp  game.hpp  input_handler.hpp  renderer.hpp
include/entity/: Archers.hpp  Canon.hpp  Dragon.hpp  Goblins.hpp  Golem.hpp  KingTower.hpp  Knight.hpp  MovableEntity.hpp  Pekka.hpp  QueenTower.hpp  RangedEntity.hpp  StationaryEntity.hpp  TowerPrioritizingEntity.hpp  Wizard.hpp  entity.hpp
src/: Archers.hpp  Canon.cpp  Canon.hpp  Dragon.hpp  EntityFactory.cpp  Goblins.cpp  Goblins.hpp  Golem.hpp  KingTower.cpp  KingTower.hpp  Knight.hpp  Pekka.hpp  QueenTower.hpp  RangedEntity.cpp  RangedEntity.hpp  TowerPrioritizingEntity.cpp  Wizard.cpp  Wizard.hpp  board.cpp  board.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  renderer.cpp  renderer.hpp
src/core/: EntityFactory.cpp  board.cpp  game.cpp  main.cpp  renderer.cpp
src/entity/: Archers.cpp  Canon.cpp  Dragon.cpp  Goblins.cpp  Golem.cpp  KingTower.cpp  Knight.cpp  MovableEntity.cpp  Pekka.cpp  QueenTower.cpp  RangedEntity.cpp  TowerPrioritizingEntity.cpp  Wizard.cpp  entity.cpp
test/: test_entity_behavior.cpp  test_entity_f.cpp  test_game_logic.cpp
